--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,11 @@ body {
     background-color: rgb(191, 196, 196);
 }
 
+.headshot {
+    max-height: 300px;
+    max-width: 300px;
+}
+
 .text-secondary {
     font-family: 'Baloo Bhai 2', cursive;
 }
@@ -12,4 +17,5 @@ body {
 
 .index-text {
     text-align: center;
+    font-size: 20px;
 }
