--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,8 @@ body {
 .headshot {
     max-height: 300px;
     max-width: 300px;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
 
 .text-secondary {
