--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(191, 196, 196);
+    background-color: black;
 }
 
 .headshot {
@@ -11,17 +11,19 @@ body {
 
 .text-secondary {
     font-family: 'Baloo Bhai 2', cursive;
+    color: white;
+    text-align: center;
+    font-size: 22px;
 }
 
 .navbar-brand {
     font-family: 'Baloo Bhai 2', cursive;
 }
 
-.index-text {
-    text-align: center;
-    font-size: 20px;
-}
-
 .contact {
     font-family: 'Baloo Bhai 2', cursive;
+}
+
+.text-secondary {
+    color: white;
 }
