--- a/assets/style.css
+++ b/assets/style.css
@@ -10,29 +10,29 @@ body {
 }
 
 .text-secondary {
-    font-family: 'Baloo Bhai 2', cursive;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 22px;
     color: white;
 }
 
 .heading {
-    font-family: 'Baloo Bhai 2', cursive;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
 
 .about-me {
-    font-family: 'Baloo Bhai 2', cursive;
-    color: white;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 22px;
+    color: white;
 }
 
 .navbar-brand {
-    font-family: 'Baloo Bhai 2', cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .contact {
-    font-family: 'Baloo Bhai 2', cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .text-secondary {
